--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "edutech",
   "private": true,
-  "packageManager": "pnpm@8",
+  "packageManager": "pnpm@10.3.0",
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
@@ -13,7 +13,8 @@
     "mobile": "cd apps/mobile && pnpm start"
   },
   "devDependencies": {
-    "turbo": "latest",
-    "typescript": "^5.5.0"
+    "turbo": "^2.5.6",
+    "typescript": "^5.9.2",
+    "@types/node": "^24.5.2"
   }
 }
