--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,31 +1,24 @@
 {
-  "name": "web",
-  "version": "0.1.0",
+  "name": "@edu/web",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@edu/db": "workspace:^",
-    "@edu/ui": "workspace:^",
-    "@edu/utils": "workspace:^",
-    "next": "15.5.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "@edu/ui": "workspace:*",
+    "@edu/utils": "workspace:*",
+    "next": "15.0.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.3",
+    "@tailwindcss/postcss": "^4.1.13",
+    "autoprefixer": "^10.4.20",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.13",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.9.2"
   }
 }
