--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,7 +1,15 @@
 {
   "name": "@edu/ui",
   "version": "0.0.0",
-  "main": "index.ts",
-  "types": "index.ts",
-  "private": true
+  "private": true,
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": ["dist"],
+  "sideEffects": false,
+  "scripts": { "build": "tsc -p tsconfig.build.json", "clean": "rm -rf dist" },
+  "peerDependencies": {
+    "react": ">=18",
+    "react-dom": ">=18"
+  },
+  "devDependencies": { "typescript": "^5.9.2" }
 }
