--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "sideEffects": false,
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
@@ -14,5 +16,9 @@
     "react": ">=18",
     "react-dom": ">=18"
   },
-  "devDependencies": { "typescript": "^5.9.2" }
+  "devDependencies": {
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "typescript": "^5.9.2"
+  }
 }
