--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -4,6 +4,13 @@
   "private": true,
   "main": "src/index.ts",
   "types": "src/index.ts",
+  "scripts": {
+    "prisma:format": "prisma format",
+    "prisma:generate": "prisma generate",
+    "prisma:push": "prisma db push",
+    "prisma:migrate": "prisma migrate deploy"
+  },
+  "prisma": { "schema": "prisma/schema.prisma" },
   "dependencies": {
     "@prisma/client": "^6.16.2",
     "prisma": "^6.16.2"
