--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,21 +2,21 @@
   "name": "@edu/ui",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
+  "exports": { ".": { "types": "./dist/index.d.ts", "import": "./dist/index.js" } },
+  "files": ["dist"],
   "sideEffects": false,
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
-    "clean": "rm -rf dist"
+    "dev": "tsc -w -p tsconfig.build.json",
+    "typecheck": "tsc -p tsconfig.build.json"
   },
-  "peerDependencies": {
-    "react": ">=18",
-    "react-dom": ">=18"
-  },
+  "peerDependencies": { "react": "^19.0.0", "react-dom": "^19.0.0" },
   "devDependencies": {
+    "@types/react": "~19.1.0",
+    "@types/react-dom": "^19.1.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "typescript": "^5.9.2"
