--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -2,6 +2,8 @@
   "name": "@edu/utils",
   "version": "0.0.0",
   "private": true,
-  "main": "index.ts",
-  "types": "index.ts"
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": ["dist"],
+  "scripts": { "build": "tsc -p tsconfig.build.json", "clean": "rm -rf dist" }
 }
