--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,15 @@
 {
   "$schema": "https://turbo.build/schema.json",
+  "globalEnv": [
+    "DATABASE_URL",
+    "NEXTAUTH_SECRET",
+    "NEXT_PUBLIC_APP_URL"
+  ],
   "tasks": {
-    "build": { "dependsOn": ["^build"], "outputs": ["dist/**", ".next/**", "build/**"] },
+    "build": {
+      "dependsOn": ["^build"],
+      "outputs": ["dist/**", ".next/**", "build/**"]
+    },
     "dev": { "cache": false, "persistent": true },
     "lint": { "outputs": [] },
     "typecheck": { "outputs": [] },
