--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "@types/react-dom": "^19.1.9",
     "turbo": "^2.5.6",
     "typescript": "^5.9.2"
+  },
+  "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "zod": "^4.1.11"
   }
 }
