fix(web): vincular @edu/db via workspace e rebuild

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@edu/db": "workspace:^",
     "@edu/ui": "workspace:*",
     "@edu/utils": "workspace:*",
     "next": "15.0.0",
