--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@edu/db": "workspace:^",
     "bcryptjs": "^3.0.2",
     "zod": "^4.1.11"
   }
