--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,26 +1,8 @@
 {
-  "name": "@edu/web",
+  "name": "edutech-monorepo",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@edu/db": "workspace:^",
-    "@edu/ui": "workspace:*",
-    "@edu/utils": "workspace:*",
-    "next": "15.0.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.13",
-    "autoprefixer": "^10.4.20",
-    "eslint-plugin-next": "^0.0.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.13",
-    "typescript": "^5.9.2"
+    "smoke": "node scripts/smoke-aula-home.mjs"
   }
 }
