--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
+    "@types/node": "^24.5.2",
     "autoprefixer": "^10.4.20",
     "eslint-plugin-next": "^0.0.0",
     "postcss": "^8.5.6",
