--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "@types/node": "^24.5.2",
     "@types/react": "~19.1.0",
     "@types/react-dom": "^19.1.9",
+    "prisma": "^6.16.2",
     "turbo": "^2.5.6",
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@prisma/client": "^6.16.2",
     "bcryptjs": "^3.0.2",
+    "next": "15",
+    "react": "19",
+    "react-dom": "19",
     "zod": "^4.1.11"
   }
 }
