fix(tsconfig): usar module=NodeNext com moduleResolution=NodeNext (TS5110)

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,8 @@
     "@edu/utils": "workspace:*",
     "next": "15.0.0",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "@edu/db": "workspace:*"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
