--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -4,30 +4,26 @@
   "private": true,
   "type": "module",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
     }
   },
-  "files": ["dist", "src", "prisma"],
+  "files": ["dist", "prisma"],
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "typecheck": "tsc -p tsconfig.json",
-    "prisma:validate": "prisma validate",
-    "prisma:generate": "prisma generate",
-    "prisma:push": "prisma db push --accept-data-loss",
-    "prisma:migrate:deploy": "prisma migrate deploy",
-    "postinstall": "prisma generate"
+    "build": "tsc -p tsconfig.build.json",
+    "dev": "tsc -w -p tsconfig.build.json",
+    "typecheck": "tsc -p tsconfig.build.json",
+    "prisma:generate": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^6.16.2"
   },
   "devDependencies": {
     "prisma": "^6.16.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.2"
   },
-  "peerDependencies": {
-    "typescript": "^5.6.3"
-  }
+  "sideEffects": false
 }
