--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -6,11 +6,7 @@
     "outDir": "dist",
     "declaration": true,
     "declarationMap": true,
-    "emitDeclarationOnly": false,
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext"
+    "noEmit": false
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
